--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "22.7.6",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
@@ -20,6 +21,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3"
   }
 }
