--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "22.7.6",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3"
