--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.7.5",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "@types/node": "22.7.6",
