--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "github:tailwindcss/typography",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/node": "22.7.6",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
@@ -28,9 +31,12 @@
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.6.3"
+    "tinymce": "^7.4.1",
+    "typescript": "5.6.3",
+    "zod": "^3.23.8"
   }
 }
