--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
     "lucide-react": "^0.453.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
     "next": "14.2.15",
     "postcss": "8.4.47",
     "react": "18.3.1",
