--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "clsx": "^2.1.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.15",
+    "html-react-parser": "^5.1.18",
     "lucide-react": "^0.453.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "next": "14.2.15",
     "postcss": "8.4.47",
+    "prismjs": "^1.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
