--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "tinymce": "^7.4.1",
     "typescript": "5.6.3",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.5"
   }
 }
