--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "14.2.15",
     "postcss": "8.4.47",
     "prismjs": "^1.29.0",
+    "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
