--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "next": "14.2.15",
+    "openai": "^4.89.0",
     "postcss": "8.4.47",
     "prismjs": "^1.29.0",
     "query-string": "^9.1.1",
