--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/node": "22.7.6",
