--- a/package.json
+++ b/package.json
@@ -9,47 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.2.1",
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@clerk/nextjs": "^6.13.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/typography": "github:tailwindcss/typography",
-    "@tinymce/tinymce-react": "^5.1.1",
-    "@types/node": "22.7.6",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
-    "autoprefixer": "10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "@tinymce/tinymce-react": "^6.1.0",
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "autoprefixer": "10.4.21",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.15",
-    "html-react-parser": "^5.1.18",
-    "lucide-react": "^0.453.0",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0",
-    "next": "14.2.15",
-    "openai": "^4.89.0",
-    "postcss": "8.4.47",
-    "prismjs": "^1.29.0",
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.4",
+    "html-react-parser": "^5.2.3",
+    "lucide-react": "^0.487.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "next": "15.2.4",
+    "openai": "^4.91.1",
+    "postcss": "8.5.3",
+    "prismjs": "^1.30.0",
     "query-string": "^9.1.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.53.1",
-    "svix": "^1.37.0",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "3.4.14",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.55.0",
+    "svix": "^1.63.1",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "tinymce": "^7.4.1",
-    "typescript": "5.6.3",
-    "zod": "^3.23.8"
+    "tinymce": "^7.7.2",
+    "typescript": "5.8.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/prismjs": "^1.26.5"
+    "@types/prismjs": "^1.26.5",
+    "tailwindcss": "^3.4.17"
   }
 }
